# satora-sdk

./: Justfile  README.md
.github/workflows/: build-dotnet-sdk.yml  esm-check.yml
core/src/: client.rs
dotnet-sdk/: .gitignore  Justfile  Lendaswap.Sdk.sln  README.md  Satora.Sdk.sln
dotnet-sdk/Lendaswap.Sdk/: Client.cs  Lendaswap.Sdk.csproj  README.md
dotnet-sdk/Lendaswap.Sdk.Cli/: Lendaswap.Sdk.Cli.csproj  Program.cs
dotnet-sdk/Lendaswap.Sdk.Tests/: ClientTests.cs  Lendaswap.Sdk.Tests.csproj
dotnet-sdk/Satora.Sdk/: Client.cs  NativeLibraryResolver.cs  README.md  Satora.Sdk.csproj
dotnet-sdk/Satora.Sdk.Cli/: Program.cs  Satora.Sdk.Cli.csproj
dotnet-sdk/Satora.Sdk.Tests/: ClientTests.cs  Satora.Sdk.Tests.csproj
dotnet-sdk/native/: Cargo.toml  build.rs
dotnet-sdk/native/src/: lib.rs
examples/pure-ts/: .env.example  README.md  package-lock.json  package.json
examples/pure-ts/src/: index.ts
examples/pure-ts/src/commands/: recover.ts  status.ts
rust-sdk/: Cargo.toml  README.md
rust-sdk/src/: arkade.rs  client.rs  crypto_init.rs  error.rs  lib.rs  request.rs  signer.rs  storage.rs  types.rs  wire.rs
rust-sdk/src/aa/: abi.rs  bundler.rs  client_ext.rs  kernel.rs  mod.rs  orchestrate.rs  paymaster.rs  permit2.rs  remote_config.rs  signing.rs  userop.rs
rust-sdk/src/types/: address.rs  chain.rs  quote.rs  swap.rs  token.rs  version.rs
rust-sdk/tests/: client_mock.rs  integration_live.rs  integration_quote.rs  openapi_schema.rs
ts-pure-sdk/: CHANGELOG.md  README.md  biome.json  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tsup.config.ts
ts-pure-sdk/.changeset/: brave-depositors-refund.md  bulk-swap-status.md  custom-invoice-description.md  deprecate-in-favor-of-satora-swap.md  euroe-cctp-bridge.md  export-sdk-version.md  pre.json  regenerate-types-arkade-0-4-45.md  sdk-commit-hash.md  soft-camels-spend.md
ts-pure-sdk/scripts/: check-esm-imports.js  sync-version.mjs
ts-pure-sdk/src/: arkade-network.ts  arkade.ts  client.ts  compose-quote.ts  delegate.ts  esplora.ts  index.ts  logging.ts  price-feed.ts  tokens.ts  usd-price.ts  version.ts
ts-pure-sdk/src/api/: client.ts
ts-pure-sdk/src/cctp/: constants.ts  fee.ts  index.ts  utils.ts
ts-pure-sdk/src/cctp-bridge/: bridge.ts  index.ts
ts-pure-sdk/src/cctp-inbound/: approveAndBurn.ts  burn.ts  chainMap.ts  client.ts  eip2612.ts  evmSignerAdapter.ts  fundSwap.ts  index.ts  permit2.ts  preflight.ts  recover.ts  smartAccount.ts  submit.ts  types.ts  userOp.ts
ts-pure-sdk/src/create/: arkade-to-lightning.ts  arkade.ts  bitcoin-to-arkade.ts  bitcoin.ts  evm-to-arkade.ts  evm-to-bitcoin.ts  evm-to-lightning.ts  lightning-to-arkade.ts  lightning.ts  retry.ts  types.ts
ts-pure-sdk/src/escrow/: index.ts
ts-pure-sdk/src/evm/: coordinator.ts  index.ts  wallet.ts
ts-pure-sdk/src/redeem/: arkade.ts  gasless.ts  index.ts  userop-claim.ts
ts-pure-sdk/src/refund/: arkade.ts  collab-arkade-evm.ts  collab-arkade-lightning.ts  index.ts
ts-pure-sdk/src/types/: chain-config.ts  chain.ts  dex-quote.ts  index.ts  network-fees.ts  quote.ts  referral-fee.ts  swap-pairs.ts
ts-pure-sdk/tests/: api-client.test.ts  cctp-chain-registry.test.ts  cctp-inbound.test.ts  client.test.ts  compose-net-target.test.ts  compose-quote-direct-pegged.test.ts  coordinator-calls-hash.test.ts  index.test.ts  logging.test.ts  solana-cctp.test.ts
ts-sdk/: biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
ts-sdk/.changeset/: euroe-readmes.md  pre.json  satora-readmes.md  satora-swap-standalone-client.md  swap-next-action-model.md
