# Standalone crate (not part of the root Cargo workspace).
[workspace]

[package]
name = "lendaswap-sdk"
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/satoraHQ/lendaswap-sdk"
description = "Lendaswap Client SDK (Rust). FFI-friendly public API; the schema is verified against the upstream OpenAPI spec."

[lib]
name = "lendaswap_sdk"
crate-type = ["rlib"]

[features]
# Gasless EVM funding via ERC-4337 (EntryPoint v0.7) + EIP-7702 delegation
# to a ZeroDev Kernel V3.3 implementation. Off by default: pulls in alloy,
# so the base SDK (quote, create_swap) stays lean and the FFI / dotnet
# layer can opt out.
gasless = ["dep:alloy"]

[dependencies]
# Crypto: HD wallet derivation, secp256k1, hashes.
# `bitcoin` re-exports `secp256k1`; no need to pull it in directly.
bip39 = "2"
bitcoin = { version = "0.32", default-features = false, features = ["std"] }
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
tracing = "0.1"
url = "2"

# Account-abstraction (`gasless` feature only). `sol-types` for the `sol!`
# ABI blocks, `rpc-types` for the ERC-4337 `PackedUserOperation` wire type.
# Provider / signer features land in a later phase.
alloy = { version = "1", optional = true, features = ["sol-types", "rpc-types"] }

[dev-dependencies]
jsonschema = { version = "0.46.4", default-features = false }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
