# Standalone crate (not part of the root Cargo workspace).
[workspace]

[package]
name = "lendaswap-sdk-ffi"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "C-ABI/UniFFI bindings to lendaswap-sdk. Internal — consumed by the dotnet-sdk wrapper, not published to crates.io."

[lib]
# `cdylib` for the dynamic .dylib/.so/.dll the .NET project P/Invokes into.
# `staticlib` for any future scenarios that need a static archive (e.g. iOS).
# `lib` so we can also pull this crate into other Rust code (test harnesses).
name = "lendaswap_sdk_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# `gasless` feature pulls in the alloy-based AA stack the FFI exposes
# via `fund_swap_gasless`. Adds substantial compile time + dylib size
# (~few MB); when an EVM-disabled build is needed (e.g. iOS-only
# minimal SDK), gate this off and remove the corresponding methods.
# `bitcoin::Network` is the only thing we need from `bitcoin` — to map
# the FFI's BitcoinNetwork enum into what `ArkadeConfig` expects.
# Version pinned to lendaswap-sdk's choice (0.32) so the resolver
# picks one copy.
bitcoin = { version = "0.32", default-features = false, features = ["std"] }
lendaswap-sdk = { path = "../../rust-sdk", features = ["gasless", "arkade-claim"] }
serde_json = "1"
thiserror = "1"
# Multi-thread runtime so multiple FFI calls don't serialise on a single
# worker. block_on() inside extern fns drives async lendaswap-sdk methods
# from synchronous C# callers.
tokio = { version = "1", features = ["rt-multi-thread"] }
# uniffi 0.29.x pairs with uniffi-bindgen-cs v0.10.x (last verified against
# NordSecurity/uniffi-bindgen-cs releases). Pin tightly while both are
# pre-1.0 to avoid macro/scaffolding drift between the Rust side and the
# external C# bindgen.
uniffi = { version = "0.29", features = ["tokio"] }
# `url` to construct `AaConfig`'s typed Url fields from the FFI's
# String inputs; `serde_json` to parse the paymaster context string
# into the SDK's `serde_json::Value` field. Both versions track what
# `lendaswap-sdk` itself uses to keep the resolver coherent.
url = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
